More Content Added

--- a/flea-treatment-in-melbourne.html
+++ b/flea-treatment-in-melbourne.html
@@ -108,23 +108,70 @@
             <div class="container py-5">
                 <div class="row">
                     <div class="col-sm-12 text-center mb-3 py-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit volu ptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto</p>
+                        <p>At Formula Pest Control, we take care of Fleas with very effective approach. Flea Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Fleas. Fleas usually infest human-inhabited properties by being brought in either by people or pet animals. It’s hard to spot them due their small size but you can surely feel their presence as they can bite humans as well. Also, if you notice that your cat or dog is scratching uncontrollably, then you should take immediate measures. We need to be cautious and get rid of them from our home/office for good. So, if you need Flea Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Flea Treatment and Commercial Flea Treatment.</p>
                     </div>
                     <div class="col-sm-5">
                         <img src="./images/services/flea.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="col-sm-7 d-flex flex-column justify-content-center align-items-start">
-                        <!-- <h3 class="mukta text-faded"><strong>Effects of Cockroaches at Your Home/Office</strong></h3> -->
-                        <p>
-                            Formula Pest Control, Melbourne - We at Formula Pest Control take care of Fleas with very effective approach. Flea Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Fleas. Fleas usually infest human-inhabited properties by being brought in either by people or pet animals. It’s hard to spot them due their small size but you can surely feel their presence as they can bite humans as well. Also, if you notice that your cat or dog is scratching uncontrollably, then you should take immediate measures. We need to be cautious and get rid of them from our home/office for good. So if you need Flea Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Flea Treatment and Commercial Flea Treatment.</p>
-                            <p class="text-left">
-                                <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
-                            </p>
-                    </div>
+                    <div class="col-sm-7">
+                      <h3 class="mukta text-faded"><strong>Effects of Fleas at Your Home/Office</strong></h3>
+                      <p>Fleas are small, wingless parasites that infest the hair coats of mammals with their piercing mouthparts, that they insert into the skin of their host to feed on blood. Though they do not directly pose a risk to humans, the population of fleas should be controlled whether it be at a home or office. Worldwide there are more than 2400 species of fleas but in Melbourne, the major species of fleas found are the cat flea, dog flea and human flea.</p>
+                      <p>Fleas are mainly transmitted from your pets so if your pet is constantly scratching any part of their body, you should immediately check for any flea bites and start flea treatment service. Before contacting a flea removal service, you should know what type of flea is infesting your property. This makes it really easier for you to explain the extent of the problem you’re facing. Don’t worry if you can’t identify the species, because that is what we as a flea treatment service professional are here for.</p>
+                      <p>Although fleas don’t bring serious problems to humans, it can be fatal for your pets which in turn will let down your emotional mood. A wildly flea-infested area could bring extreme anxiety and worries which will ultimately affect your lifestyle. Flea infestation causes a number of health issue in pets, and flea removal and control are a necessity for home and office in Melbourne.</p>
+                  </div>
+                  <div class="col-sm-12">
+                    <br>
+                    <!--<p>Cockroaches can also possess viruses such as polio, and their dead skins can trigger allergies and asthma. So, they are more than just a small insect; they are a severe health hazard. 
+                        <br>
+                        The one constant fact about cockroaches is that they are adaptable and capable of surviving even in some of the harshest environments. These insects have managed to spread across in virtually every continent.
+                    </p>-->
+                    <p class="text-center">
+                        <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                    </p>
+                </div>
                 </div>
                 <!-- end row -->
             </div>
         </section>
+
+        <section>
+          <div class="container py-5">
+              <div class="row">
+                  <div class="col-sm-12 text-center">
+                      <h3 class="text-faded mukta text-uppercase"><strong>Why you need Fleas Treatment?</strong></h3>
+                      <br>
+                      <p>Fleas are among the worst parasites that attacks you and your pet. Flea bites can be nasty which is why flea treatment service is a necessity. Fleas are a serious threat to the health of your beloved cats and dogs because they are practically inseparable once they’ve latched on. Beside causing dermatitis in your pets, fleas can even transmit tapeworms. For fleas, breeding doesn’t take too much time. Flea lay eggs directly on the host but often the eggs fall off and the infestation is spread to the surrounding environment. Before you know it, you’ll have a total flea infestation on your property, so you should seek flea treatment service at all cost.</p> 
+                      <p>Fleas seek the blood of the host to survive and the effects of their bites can range from minor irritation to deadly condition for the pets. If the flea removal is not done in time, then the increasing number of fleas can create skin irritation to humans. Also, fleas are carriers of bacteria that can cause constant scratching in humans.</p>
+                      <p>Since Melbourne is an area with high humidity and moderate temperatures, it is a hotspot for fleas to live in. If you’re a resident of Melbourne, you already know this that you have high exposure and risks to fleas compared to other areas. In rare cases, fleas can bite humans and humans don’t react well to the bites. If the flea treatment service is not done, then people may experience swelling in their legs, faces and hands.</p>
+                  </div>
+              </div>
+          </div>
+      </section>
+      
+      <section class="bg-light">
+          <div class="container py-5">
+              <div class="row">
+                  <div class="col-sm-12 text-center">
+                      <h3 class="text-faded mukta text-uppercase"><strong>Our Work Process for Fleas Removal</strong></h3>
+                      <br>
+                      <p>
+                        Are you seeing an increasing number of fleas around your property and are searching for effective flea treatment service for your property? At Formula Pest Control, our flea treatment service professional has a couple of years of expertise and experience for flea removal in Melbourne. Our flea removal specialists are certified and fully licensed and are guaranteed to provide the most effective flea treatment service.  
+                      </p> 
+                      <p>
+                        After you contact us for flea treatment service, we will immediately visit your property and start with the flea control to make your environment clean and healthy. First, our flea treatment service professionals will inspect and identify the flea species and also check for bites in your pets. Based on the inspection, we will consult with you for further steps for flea removal. We also provide custom-tailored procedures for flea treatment. We provide either chemical or non-chemical flea treatment and in rare cases, we have to use both. Non-chemical flea treatment service includes thoroughly vacuuming your property and application of the heat treatment process. Chemical flea treatment service includes the application of pesticides that is safe for you and your pets. This will comprehensively remove all the fleas from your property. For further prevention of flea-infestation, we also suggest you safety measures. Additionally, we also provide move-out flea treatment, in which the tenants before moving out, contact us to completely remove all the fleas from their property including the carpets and floors. 
+                      </p>
+                      <p>
+                        We also provide emergency flea treatment service to residential and commercial customers. Our flea treatment service is not only to treat the flea problem but also to look at the root cause. If you suspect you might have a flea infestation and require rodent treatment service, then give us a call or contact us via email for a free quote. We would be happy to discuss the problems and provide effective solutions for you.It is always better to act quickly rather than wait.
+                      </p>
+                      <br>
+                      <hr>
+                      <br>
+                      <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
+                      <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                  </div>
+              </div>
+          </div>
+          </section>
 
     </main>
     
