--- a/rats-treatment-in-melbourne.html
+++ b/rats-treatment-in-melbourne.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col-sm-12 wow animate__fadeInUp">
                         <div class="text-center">
-                            <h1 class="consistent-header mukta"><strong>Rats Treatment In Melbourne</strong></h1>
+                            <h1 class="consistent-header mukta"><strong>Rats/Mice/Rodents Treatment In Melbourne</strong></h1>
                         </div>
                     </div>
                 </div>
@@ -108,22 +108,65 @@
             <div class="container py-5">
                 <div class="row">
                     <div class="col-sm-12 text-center mb-3 py-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit volu ptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto</p>
+                        <p>We at Formula Pest Control take care of Rodents with very effective approach. Rats / Mice / Rodents Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Rodents. Rats, mice and other rodents in your home can be a huge pest problem. Not only do they leave disgusting droppings wherever they go, but they can cause damage to your food, furniture and other parts of your home / office. We need to be cautious and get rid of them from our home/office for good. So, if you need Rodents Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Rodent Treatment and Commercial Rodent Treatment.</p>
                     </div>
                     <div class="col-sm-5">
                         <img src="./images/services/rat.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="col-sm-7 d-flex flex-column justify-content-center align-items-start">
-                        <!-- <h3 class="mukta text-faded"><strong>Effects of Cockroaches at Your Home/Office</strong></h3> -->
-                        <p>
-                            Formula Pest Control, Melbourne - We at Formula Pest Control take care of Rodents with very effective approach. Rats / Mice / Rodents Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Rodents. Rats, mice and other rodents in your home can be a huge pest problem. Not only do they leave disgusting droppings wherever they go, but they can cause damage to your food, furniture and other parts of your home / office. We need to be cautious and get rid of them from our home/office for good. So if you need Rodents Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Rodent Treatment and Commercial Rodent Treatment.</p>
-                            <p class="text-left">
-                                <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
-                            </p>
-                    </div>
+                    <div class="col-sm-7">
+                      <h3 class="mukta text-faded"><strong>Effects of Rats/Mice/Rodents at Your Home/Office</strong></h3>
+                      <p>Most people have an inherent dislike or fear of mice and rats, and considering the number of dangerous diseases they spread to humans, it’s understandable to be scared of the rodents. The rodents can also play a large role in contracting different allergies and their feeding habits are destructive which makes it important for rodent removal at your home or office. The structure of rodent-infested buildings is compromised by their nesting behaviours. Australia is home to more than 60 indigenous rodent species with the most common species in Melbourne being the Norway rat, Roof rat and the infamous house mouse.</p>
+                      <p>As nocturnal creatures, rodents are more active at night and the fact that they are secretive makes it difficult for an infestation to be proven. So, it is often easier to spot signs of the problem than to actually notice an infestation. Look for signs of rat droppings, scratching noises, distinctive damage proof and multiple burrows at your property. Even if you don’t see the rodents, these signs are indications that your home or office is already infested. So, it’s never too late to call for a professional rodent treatment service so that you don’t have to deal with these vicious pests.</p>
+                  </div>
+                  <div class="col-sm-12">
+                    <br>
+                    <p>Rodent infestation causes a number of health issues in humans and pets, and rat removal and rodent control is a necessity for home and office in Melbourne. Other than health issues, rodents can take a huge toll on your beautiful property. They’re well known to eat just about anything – including parts of your home or office like wallboards, cardboards and even your furniture. Also, when they gnaw on electrical wiring, that can lead to dangerous events like huge fires at your property resulting in complete destruction.</p>
+                    <p class="text-center">
+                        <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                    </p>
+                </div>
                 </div>
                 <!-- end row -->
             </div>
+        </section>
+
+        <section>
+          <div class="container py-5">
+              <div class="row">
+                  <div class="col-sm-12 text-center">
+                      <h3 class="text-faded mukta text-uppercase"><strong>Why you need Rats/Mice/Rodents Treatment?</strong></h3>
+                      <br>
+                      <p>Among the extremely adaptable pests are the rodents. They make a home in your kitchen, sheds, garages, and gardens. Once they’ve properly settled, they persistently cause problems and significant damage to property and pose a risk to human health. The rodent treatment service will make it easy for rodent control and further prevent the spread of disease. One of the major benefits of hiring our professional rodent treatment service is your property will be free of dangerous rats completely. Also, the rodent removal process will maintain a healthy environment free of all diseases that these rodents could transmit.</p> 
+                      <p>Our rodent treatment service will get inside your home and take out all the rats off your property and make sure there are no more of these dangerous rodents causing trouble. Through persistent visits, our rodent removal service will let you know the best ways to remove and reduce the risk of rodents in your property. A professional rodent control service is usually the best option for removing the rodents. Our rodent control professionals are specifically trained to deal with the difficulties and risks presented by rodents. They will have sufficient knowledge on whether to use the traps and also where to place them. The number of rodents tends to be much bigger than the one rat you may see, and our rodent treatment service will know exactly if there is an infestation. Our rodent removal process also finds and seals all the cracks and openings that is the entry point for rats to enter your property. Also, our rodent control professionals know the right sanitary equipment to use when cleaning up rodent-infested properties so that no further risk will be taken.</p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <section class="bg-light">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h3 class="text-faded mukta text-uppercase"><strong>Our Work Process for Rats/Mice/Rodents Removal</strong></h3>
+                    <br>
+                    <p>
+                      Rodents are one of the most dangerous pests that are causing havoc in Melbourne. It is important to inspect your property checking whether it is rodent-infested. If your property is heavily infested, it is important to act quickly to control the level of infestation and remove the rodent for good. Getting rid of these rodents can be very difficult if you don’t have the right resources and the right knowledge.
+                    </p> 
+                    <p>
+                      Rodent treatment service is one of the major services we provide to our customers. At Formula Pest Control, we treat and seal the rodent entry points throughout your property looking at your foundation, rooflines, external wall points and burrows. Our rodent treatment professionals are certified and have the perfect knowledge for effective rodent removal. The rodent control professionals also help to control the moisture in and around your property since high humidity and liquid is very appealing to rodents.
+                    </p>
+                    <p>
+                      We also provide emergency rodent treatment service to residential and commercial customers who are at dire risk of these rodents. Our rodent removal service is the best in the business in Melbourne and we have been helping many get rid of it. We can also advise you to discourage these rodents from entering your property to prevent an infestation.
+                    </p>
+                    <p>If you suspect you might have a rodent infestation and require rodent treatment service, then give us a call or contact us via email for a free quote. We would be happy to discuss the problems and provide effective solutions for you.It is always better to act quickly rather than wait.</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
+                    <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                </div>
+            </div>
+        </div>
         </section>
 
     </main>
