--- a/index.html
+++ b/index.html
@@ -412,24 +412,24 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Possums removal</td>
-                  <td>Starting from $350 to $550</td>
-                </tr>
-                <tr>
-                  <td>Bed bugs treatment</td>
-                  <td>Starting from $380 to $520(2 treatment)</td>
-                </tr>
-                <tr>
-                  <td>Birds mites treatment</td>
-                  <td>Starting from $350 to $550</td>
-                </tr>
-                <tr>
-                  <td>Pest inspection</td>
-                  <td>Starting from $120</td>
+                  <td>Pest Inspection</td>
+                  <td>Starting from $90</td>
                 </tr>
                 <tr>
                   <td>Termites Inspection</td>
-                  <td>Starting from $350 to $550</td>
+                  <td>Starting from $250</td>
+                </tr>
+                <tr>
+                  <td>Possums removal</td>
+                  <td>Starting from $280</td>
+                </tr>
+                <tr>
+                  <td>General Pest Inspection</td>
+                  <td>Starting from $150</td>
+                </tr>
+                <tr>
+                  <td>Bedbugs Treatment</td>
+                  <td>Starting from $180</td>
                 </tr>
               </tbody>
             </table>
