--- a/rates.html
+++ b/rates.html
@@ -113,67 +113,39 @@
                     <tbody>
                       <tr>
                         <td>Possums removal</td>
-                        <td>Starting from $350 to $550</td>
+                        <td>Starting from $280</td>
                       </tr>
                       <tr>
                         <td>Bed bugs treatment</td>
-                        <td>Starting from $380 to $520(2 treatment)</td>
-                      </tr>
-                      <tr>
-                        <td>Birds mites treatment</td>
-                        <td>Starting from $350 to $550</td>
+                        <td>Starting from $180</td>
                       </tr>
                       <tr>
                         <td>Pest inspection</td>
-                        <td>Starting from $120</td>
+                        <td>Starting from $90</td>
+                      </tr>
+                      <tr>
+                        <td>General Pest Control</td>
+                        <td>Starting from $150</td>
                       </tr>
                       <tr>
                         <td>Termites Inspection</td>
-                        <td>Starting from $350 to $550</td>
+                        <td>Starting from $250</td>
                       </tr>
                       <tr>
                         <td>Rodents Treatment</td>
-                        <td>Starting from $180 to $320</td>
+                        <td>Starting from $150</td>
                       </tr>
                       <tr>
                         <td>Fleas Treatment</td>
-                        <td>Starting from $220 to $420</td>
-                      </tr>
-                      <tr>
-                        <td>German Cockroaches Treatment</td>
-                        <td>Starting from $180 to $380 (2 treatment)</td>
-                      </tr>
-                      <tr>
-                        <td>Cockroaches Treatment</td>
-                        <td>Starting from $180 to $320</td>
-                      </tr>
-                      <tr>
-                        <td>Ants Treatment</td>
-                        <td>Starting from $180 to $320</td>
-                      </tr>
-                      <tr>
-                        <td>Spiders Treatment</td>
-                        <td>Starting from $180 to $320</td>
-                      </tr>
-                      <tr>
-                        <td>Moths Treatment</td>
-                        <td>Starting from $220 to $320</td>
-                      </tr>
-                      <tr>
-                        <td>Carpet Beetles Treatment</td>
-                        <td>Starting from $220 to $420</td>
-                      </tr>
-                      <tr>
-                        <td>Silverfish Treatment</td>
-                        <td>Starting from $220 to $420</td>
+                        <td>Starting from $160</td>
                       </tr>
                       <tr>
                         <td>Termites Treatment</td>
-                        <td>Prices on inspection</td>
+                        <td>Starting from $1200</td>
                       </tr>
                       <tr>
-                        <td>Wasps/Bees Treatment</td>
-                        <td>$220 per nest</td>
+                        <td>Bird Proofing Solar Panels</td>
+                        <td>Starting from $450</td>
                       </tr>
                     </tbody>
                   </table>
